# kanikani

./: .gitignore  Cargo.toml  README.md  todo.md
src/: config.rs  main.rs  term.rs  tui.rs  wanikani.rs
src/art/: kanilogo.txt  kaniname.txt
src/wanikani/: api.rs  assignment.rs  decode.rs  lessons.rs  reviews.rs  subject.rs  summary.rs  user.rs  utils.rs
