[package]
name = "kanikani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = "0.26.2"
reqwest = "0.12.4"
toml = "0.8.12"
tui-input = "0.8.0"
