[package]
name = "kanikani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = "0.26.2"
reqwest = { version = "0.12.4", features = ["json"] }
toml = "0.8.12"
tui-input = "0.8.0"
terminal_size = "0.3.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
serde_with = "3.8.0"
